@@ -43,7 +43,7 @@
     avt_set_text_background_color
   - new functions/macros:
     avt_get_balloon_color,
-    avt_set_balloon_mode, avt_load_audio_part,
+    avt_set_avatar_mode, avt_load_audio_part,
     avt_rgb, avt_red, avt_green, avt_blue,
     avt_colorname, avt_palette,
     avt_finalize_raw_audio
@@ -85,7 +85,7 @@
   - avt.load_audio_file, avt.load_audio_stream, avt.load_audio have a new
     parameter for playing immediately
   - avt.title is an alias for avt.set_title
-  - new functions: avt.set_balloon_mode, avt.avatar_image_file, avt.delay,
+  - new functions: avt.set_avatar_mode, avt.avatar_image_file, avt.delay,
     avt.search, avt.load_audio_stream, avt.translate, avt.set_bitmap_color
   - new variables: avt.datapath, avt.language
   - Module "akfavatar-graphic"
